@@ -612,6 +612,8 @@ n := strings.length( test );
 pragma assert( n = 4 );
 s := strings.image( 65 );
 pragma assert( s = " 65" );
+s := strings.image( true );
+pragma assert( s = "true" );
 c := strings.val( 65 );
 pragma assert( c = 'A' );
 s := strings.field( "a/b/c", 1, '/' );
